--- a/src/index.css
+++ b/src/index.css
@@ -254,16 +254,9 @@ ul {
 }
 
 /* ============= PROJECT CSS =============== */
-
-/* optional overwrite */
-
 body {
   background: var(--primary-100);
 }
-
-/* * {
-  border: 2px solid red;
-} */
 
 main {
   min-height: 100vh;
@@ -271,19 +264,21 @@ main {
   justify-content: center;
   align-items: center;
 }
+
 .container {
-  /* border: 2px solid red; */
   width: 90vw;
   max-width: var(--fixed-width);
   margin: 5rem 0;
-  background: var(--white);
+  background-color: var(--white);
   border-radius: var(--borderRadius);
   padding: 1.5rem 2rem;
   box-shadow: var(--shadow-1);
 }
+
 .container h3 {
   margin-bottom: 2rem;
 }
+
 .person {
   display: grid;
   grid-template-columns: auto 1fr;
@@ -291,16 +286,19 @@ main {
   margin-bottom: 1.5rem;
   align-items: center;
 }
+
 .person img {
   width: 75px;
   height: 75px;
   border-radius: 50%;
   box-shadow: var(--shadow-3);
 }
+
 .person h4 {
   font-weight: 500;
   margin-bottom: 0.5rem;
 }
+
 .person p {
   color: var(--grey-500);
 }
